<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_20dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/small_8dp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_back_arrow"
                android:fontFamily="@font/belgrano"
                android:text="@string/txt_account"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/img_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/small_16dp"
                android:padding="@dimen/small_8dp"
                app:srcCompat="@drawable/ic_notifications" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/normal_32dp"
        app:cardElevation="@dimen/small_10dp"
        app:cardMaxElevation="@dimen/small_12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_16dp"
                android:padding="@dimen/small_8dp"
                android:text="@string/txt_dec_11"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/small_16dp"
                android:padding="@dimen/small_8dp"
                android:text="@string/txt_10_am"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_hft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_date"
                android:layout_marginStart="@dimen/small_16dp"
                android:text="@string/txt_13_045_hft"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/large_60dp"
                android:layout_height="@dimen/large_60dp"
                android:layout_below="@id/txt_hft"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/guru" />

            <TextView
                android:id="@+id/txt_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_hft"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/small_20dp"
                android:layout_marginTop="@dimen/large_64dp"
                android:layout_toEndOf="@id/profile_image"
                android:text="@string/txt_12k"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_hft"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/small_4dp"
                android:layout_marginTop="@dimen/large_67dp"
                android:layout_toEndOf="@id/txt_followers_count"
                android:text="@string/txt_followers"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/txt_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_hft"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/small_10dp"
                android:layout_marginTop="@dimen/large_64dp"
                android:layout_toEndOf="@id/txt_followers"
                android:text="@string/txt_127"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_hft"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/small_4dp"
                android:layout_marginTop="@dimen/large_67dp"
                android:layout_toEndOf="@id/txt_following_count"
                android:text="@string/txt_followings"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_painting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_20dp"
            android:background="@drawable/bg_rounded_black"
            android:paddingHorizontal="@dimen/small_24dp"
            android:paddingVertical="@dimen/small_8dp"
            android:text="@string/txt_painting"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_sculpture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_20dp"
            android:paddingHorizontal="@dimen/small_24dp"
            android:paddingVertical="@dimen/small_8dp"
            android:text="@string/txt_sculpture"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_architecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_20dp"
            android:paddingHorizontal="@dimen/small_24dp"
            android:paddingVertical="@dimen/small_8dp"
            android:text="@string/txt_architecture"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_layout"
        tools:listitem="@layout/item_view_for_account_screen" />

</RelativeLayout>