<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="@dimen/small_20dp"
    app:cardElevation="@dimen/small_10dp"
    app:cardMaxElevation="@dimen/small_12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_20dp">

        <ImageView
            android:id="@+id/img_hanna_art"
            android:layout_width="@dimen/large_100dp"
            android:layout_height="@dimen/large_100dp"
            android:src="@drawable/hanna" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_24dp"
            android:layout_marginTop="@dimen/small_10dp"
            android:layout_toEndOf="@id/img_hanna_art"
            android:fontFamily="sans-serif"
            android:text="@string/txt_11_dec"
            android:textColor="#aeaeae" />

        <TextView
            android:id="@+id/txt_hanna_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_date"
            android:layout_marginStart="@dimen/small_24dp"
            android:layout_marginTop="@dimen/small_10dp"
            android:layout_toEndOf="@id/img_hanna_art"
            android:fontFamily="@font/belgrano"
            android:text="@string/txt_hanna_art"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_hanna_art"
            android:layout_marginStart="@dimen/text_size_24sp"
            android:layout_marginTop="@dimen/small_4dp"
            android:layout_toEndOf="@id/img_hanna_art"
            android:text="@string/txt_martin_collection"
            android:textColor="#aeaeae" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/small_10dp"
            android:background="@drawable/bg_rounded_yellow"
            android:paddingHorizontal="@dimen/small_4dp"
            android:paddingVertical="@dimen/small_4dp"
            android:text="@string/txt_12_032_eth"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>